--- a/templates/sign-up-doula.html
+++ b/templates/sign-up-doula.html
@@ -56,7 +56,7 @@
 				<td><input type="file" name="image" accept="image/*"></td>
 			<tr>
 				<td></td>
-				<td><input type="submit" value="Sign Up"></td>
+				<td><input id="doula_signup" type="submit" value="Sign Up"></td>
 
 		</form>
 	</table>
