fixed style for suggested doulas and parents

--- a/templates/bootstrap-base.html
+++ b/templates/bootstrap-base.html
@@ -28,7 +28,7 @@
 
 
     <!-- this is from jquery datepicker page -->
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.11.0/themes/smoothness/jquery-ui.css">
+    <link rel="stylesheet" href="/static/js/themes-smoothness-jquery-ui.min.css">
         
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
@@ -108,7 +108,7 @@
     <script src="/static/js/jquery-1.11.1.min.js"></script>
     
     <!-- this is from jquery datepicker page -->
-    <script src="//code.jquery.com/ui/1.11.0/jquery-ui.js"></script>
+    <script src="/static/js/jquery-ui.min.js"></script>
 
     <script src="/static/bootstrap/js/bootstrap.min.js"></script>
     
