--- a/templates/user-profile.html
+++ b/templates/user-profile.html
@@ -36,18 +36,18 @@
 
     
         
-      <div class="col-md-3 col-sm-12" id="profile-column-right">
+      <div class="col-md-3 col-xs-12" id="profile-column-right">
         {% if suggested_parent_list != None %} 
-          <div class="col-xsm-12">
+          <div class="col-xs-12">
             <h4 style="text-align: center">Similar Parents</h4>
           </div>
             {% for s_parent in suggested_parent_list %}
-              {% if s_parent.id == parent.id %}  
-                <div class="parent-suggestion col-md-12 col-sm-4">
-                  <div class="col-sm-6" id="suggestion-1-thumb"> 
+              {% if s_parent.id != parent.id %}  
+                <div class="suggestion col-xs-4 col-md-12">
+                  <div class="col-xs-6" id="suggestion-1-thumb"> 
                     <img style="margin:2" width=50 src="/static/images/uploads/{{ s_parent.image }}">
                   </div>
-                  <div class="col-sm-6" id="suggestion-1-desc">
+                  <div class="col-xs-6" id="suggestion-1-desc">
                     <p> <a href="/parent/{{ s_parent.id }}">{{ s_parent.firstname }} {{ s_parent.lastname }}</a>
                       {{ s_parent.zipcode }}
                     </p>
