last commit before i make a ne folder for asstests

--- a/templates/sign-up-doula.html
+++ b/templates/sign-up-doula.html
@@ -9,7 +9,7 @@
 		<div class="panel-heading">
 		<h2>Doula Sign Up</h2>
 	</div>
-	<table class="table" id="login_table">
+	<table class="table" id="signup_table">
 		<form action="signup_doula" enctype="multipart/form-data" method="post">
 			<tr>
 				<td>First name:</td>
