--- a/static/styles2.css
+++ b/static/styles2.css
@@ -58,11 +58,14 @@ dl dd {
 	text-align:left;
 	background-color: white;
 	padding: 5px;
-	margin: 10px;
+	margin-top: 10px;
 }
 
-.doula-suggestion {
-	text-align: left
+.suggestion {
+	text-align: left;
+	margin-top: 10px;
+	margin-bottom: 10px;
+
 }
 
 /*form dl dt {
@@ -142,6 +145,9 @@ body {
 }
 
 
+#signup_table .tr {
+	font-weight: normal;
+}
 
 /*a .editable {
 	color: black;
