added form validations to doula signup form, placed those in users.py

--- a/templates/sign-up-doula.html
+++ b/templates/sign-up-doula.html
@@ -22,13 +22,13 @@
 				<td><input type="text" name="practice"></td>
 
 			<tr>
-				<td>Email:</td>
+				<td>Email <span style="color:red">*</span>:</td>
 				<td><input type="email" name="email"></td>
 			<tr>
-				<td>Password:</td>
+				<td>Password <span style="color:red">*</span>:</td>
 				<td><input type="password" name="password"></td>
 			<tr>
-				<td>Confirm password:</td>
+				<td>Confirm password <span style="color:red">*</span>:</td>
 				<td><input type="password" name="password_again"></td>
 			<tr>
 				<td>Phone number:</td>
@@ -49,10 +49,10 @@
 				<td>What services do you provide?</td>
 				<td><textarea name="services" rows="5" cols="50"></textarea></td>
 			<tr>
-				<td>Zipcode:</td>
+				<td>Zipcode <span style="color:red">*</span>:</td>
 				<td><input type="text" name="zipcode"></td>
 			<tr>
-				<td>Upload a profile picture</td>
+				<td>Upload a profile picture <span style="color:red">*</span></td>
 				<td><input type="file" name="image" accept="image/*"></td>
 			<tr>
 				<td></td>
