saving changes to parent signup template

--- a/templates/sign-up-parent.html
+++ b/templates/sign-up-parent.html
@@ -23,20 +23,20 @@
 				<td>Display name for profile page:</td>
 				<td><input type="text" name="display_name"></td>
 			<tr>
-				<td>Email:</td>
+				<td>Email <span style="color:red">*</span>:</td>
 				<td><input type="email" name="email"></td>
 
 			<tr>
-				<td>Password:</td>
+				<td>Password <span style="color:red">*</span>:</td>
 				<td><input type="password" name="password"></td>
 			<tr>
-				<td>Confirm password:</td>
+				<td>Confirm password <span style="color:red">*</span>:</td>
 				<td><input type="password" name="password_again"></td>
 			<tr>
-				<td>Zipcode:</td>
+				<td>Zipcode <span style="color:red">*</span>:</td>
 				<td><input type="text" name="zip"></td>
 			<tr>
-				<td>When is your baby due?:</td>
+				<td>When is your baby due? <span style="color:red">*</span>:</td>
 				<td><input type="date" name="due_date"></td>
 			<tr>
 				<td>How much are you looking to spend on your doula?</td>
@@ -58,7 +58,7 @@
 		  					<dd><option value="none">No one, I'm just here to contact others</option>
 		  		</td>
 			<tr>
-				<td>Upload a profile picture</td>
+				<td>Upload a profile picture <span style="color:red">*</span></td>
 				<td><input type="file" name="image" accept="image/*"></td>
 			<tr>
 				<td></td>
