checked to make sure jquery script tags were correct

--- a/templates/bootstrap-base.html
+++ b/templates/bootstrap-base.html
@@ -86,7 +86,7 @@
       <!-- ADD IN SPOT FOR FLASH MESSAGES HERE -->
       {% with messages = get_flashed_messages() %}
         {% if messages %}
-          <ul class=flashes>
+          <ul class="flashes">
           {% for message in messages %}
             <li>{{ message }}</li>
           {% endfor %}
