cleaned up code, deleted comments, etc

--- a/templates/bootstrap-base.html
+++ b/templates/bootstrap-base.html
@@ -83,7 +83,7 @@
         </div>
         
       </div>
-      <!-- ADD IN SPOT FOR FLASH MESSAGES HERE -->
+      <!-- Space for flashed messages -->
       {% with messages = get_flashed_messages() %}
         {% if messages %}
           <ul class="flashes">
@@ -112,9 +112,7 @@
 
     <script src="/static/bootstrap/js/bootstrap.min.js"></script>
     
-    <!-- this is for bootstrap editability -->
-    <!-- use the link in production, not development. also, the one i'm linking to in my directory is not minimized, easier to read for now, switch in production
-    <script src="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/js/bootstrap-editable.min.js"></script> -->
+    <!-- this is for bootstrap x-editable -->
     <script src="/static/bootstrap/bootstrap-editable/js/bootstrap-editable.js"></script>
 
     
